--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   background-color: mediumseagreen;
 }
 
-.todo-box {
+.status {
   width: 10px;
   height: 18px;
 }
@@ -20,15 +20,13 @@
   padding-bottom: 10px;
 }
 
-.strike-through {
-  padding-left: 10px;
-  text-decoration: line-through;
+.todo span {
   cursor: pointer;
+  padding-left: 10px;
 }
 
-.text {
-  padding-left: 10px;
-  cursor: pointer;
+.strike-through {
+  text-decoration: line-through;
 }
 
 .title {
